Fix header-content overlap on small screens

--- a/src/assets/toolkit/styles/theme/components/organisms/_hero.scss
+++ b/src/assets/toolkit/styles/theme/components/organisms/_hero.scss
@@ -38,7 +38,8 @@
 
   .header-group {
     @include grid-media($media-lg) {
-      @include center-transform;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
 }
